crates/pg_syntax/tests/snapshots/postgres_regress/create_function_sql@128.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT voidtest2(11,22);"
---
SelectStmt@0..24
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..22
    FuncCall@7..22
      Ident@7..16 "voidtest2"
      Ascii40@16..17 "("
      AConst@17..19
        Iconst@17..19 "11"
      Ascii44@19..20 ","
      AConst@20..22
        Iconst@20..22 "22"
  Ascii41@22..23 ")"
  Ascii59@23..24 ";"

