crates/pg_syntax/tests/snapshots/postgres_regress/create_function_sql@139.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT double_append(array_append(ARRAY[q1], q2), q3)\n  FROM (VALUES(1,2,3), (4,5,6)) v(q1,q2,q3);"
---
SelectStmt@0..98
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..52
    FuncCall@7..52
      Ident@7..20 "double_append"
      Ascii40@20..21 "("
      FuncCall@21..47
        Ident@21..33 "array_append"
        Ascii40@33..34 "("
        AArrayExpr@34..42
          Array@34..39 "ARRAY"
          Ascii91@39..40 "["
          ColumnRef@40..42
            Ident@40..42 "q1"
        Ascii93@42..43 "]"
        Ascii44@43..44 ","
        Whitespace@44..45 " "
        ColumnRef@45..47
          Ident@45..47 "q2"
      Ascii41@47..48 ")"
      Ascii44@48..49 ","
      Whitespace@49..50 " "
      ColumnRef@50..52
        Ident@50..52 "q3"
  Ascii41@52..53 ")"
  Newline@53..54 "\n"
  Whitespace@54..56 "  "
  From@56..60 "FROM"
  Whitespace@60..61 " "
  Ascii40@61..62 "("
  RangeSubselect@62..96
    SelectStmt@62..83
      Values@62..68 "VALUES"
      Ascii40@68..69 "("
      List@69..74
        AConst@69..70
          Iconst@69..70 "1"
        Ascii44@70..71 ","
        AConst@71..72
          Iconst@71..72 "2"
        Ascii44@72..73 ","
        AConst@73..74
          Iconst@73..74 "3"
      Ascii41@74..75 ")"
      Ascii44@75..76 ","
      Whitespace@76..77 " "
      Ascii40@77..78 "("
      List@78..83
        AConst@78..79
          Iconst@78..79 "4"
        Ascii44@79..80 ","
        AConst@80..81
          Iconst@80..81 "5"
        Ascii44@81..82 ","
        AConst@82..83
          Iconst@82..83 "6"
    Ascii41@83..84 ")"
    Ascii41@84..85 ")"
    Whitespace@85..86 " "
    Alias@86..96
      Ident@86..87 "v"
      Ascii40@87..88 "("
      Ident@88..90 "q1"
      Ascii44@90..91 ","
      Ident@91..93 "q2"
      Ascii44@93..94 ","
      Ident@94..96 "q3"
  Ascii41@96..97 ")"
  Ascii59@97..98 ";"

